--- a/_sass/_bootswatch.scss
+++ b/_sass/_bootswatch.scss
@@ -1,228 +1,91 @@
-// Yeti 4.3.1
+// Minty 4.5.0
 // Bootswatch
 
 
 // Variables ===================================================================
 
-$web-font-path: "https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,700italic,400,300,700&display=swap" !default;
+$web-font-path: "https://fonts.googleapis.com/css?family=Montserrat&display=swap" !default;
 @import url($web-font-path);
 
 // Navbar ======================================================================
 
 .navbar {
-  font-size: $font-size-sm;
-  font-weight: $headings-font-weight;
-}
-
-.bg-primary {
-
-  .dropdown-menu {
-    background-color: $primary;
-
-    .dropdown-item,
-    .dropdown-item:focus {
-      color: $navbar-dark-color;
-    }
-
-    .dropdown-item.active,
-    .dropdown-item:hover,
-    .dropdown-item:focus {
-      background-color: darken($primary, 5%);
-      color: #fff;
-    }
-  }
+  font-family: $headings-font-family;
 }
 
 .bg-dark {
-  background-color: $gray-800 !important;
-
-  .dropdown-menu {
-    background-color: $gray-800;
-
-    .dropdown-item,
-    .dropdown-item:focus {
-      color: $navbar-dark-color;
-    }
-
-    .dropdown-item.active,
-    .dropdown-item:hover,
-    .dropdown-item:focus  {
-      background-color: darken($gray-800, 5%);
-      color: #fff;
-    }
-  }
+  background-color: $secondary !important;
 }
 
-.bg-light {
-
-  .dropdown-menu {
-    background-color: $gray-200;
-
-    .dropdown-item,
-    .dropdown-item:focus {
-      color: $navbar-light-color;
-    }
-
-    .dropdown-item.active,
-    .dropdown-item:hover,
-    .dropdown-item:focus  {
-      background-color: lighten($gray-200, 5%);
-      color: $navbar-light-hover-color;
-    }
-  }
+.border-dark {
+  border-color: $secondary !important;
 }
 
 // Buttons =====================================================================
 
 .btn {
-  &-primary {
-    border-color: darken($primary, 5%);
-  }
+  font-family: $headings-font-family;
 
-  &-secondary {
-    border-color: darken($secondary, 5%);
-  }
-
-  &-success {
-    border-color: darken($success, 5%);
-  }
-
-  &-info {
-    border-color: darken($info, 5%);
+  &,
+  &:hover {
     color: $white;
   }
 
-  &-danger {
-    border-color: darken($danger, 5%);
+  &-light,
+  &-light:hover {
+    color: $gray-700;
   }
 
-  &-warning {
-    border-color: darken($warning, 5%);
-    color: $white;
+  &-link,
+  &-link:hover {
+    color: $primary;
   }
 
-  &-light {
-    border-color: darken($light, 5%);
+  &-link.disabled:hover {
+    color: $gray-600;
   }
 
-  &-dark {
-    border-color: darken($dark, 5%);
-  }
-}
-
-.btn-group {
-
-  .dropdown-menu {
-    border-top-width: 0;
+  &-outline-primary {
+    color: $primary;
   }
 
-  .dropdown-toggle {
+  &-outline-secondary {
+    color: $secondary;
+  }
 
-    &.btn-primary ~ .dropdown-menu {
-      background-color: $primary;
-      border-color: darken($primary, 5%);
+  &-outline-success {
+    color: $success;
+  }
 
-      .dropdown-item {
-        color: $white;
-      }
+  &-outline-info {
+    color: $info;
+  }
 
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        background-color: darken($primary, 8%);
-      }
-    }
+  &-outline-warning {
+    color: $warning;
+  }
 
-    &.btn-secondary ~ .dropdown-menu {
-      background-color: $secondary;
-      border-color: darken($secondary, 5%);
+  &-outline-danger {
+    color: $danger;
+  }
 
-      .dropdown-item {
-        color: $white;
-      }
+  &-outline-dark {
+    color: $dark;
+  }
 
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        background-color: darken($secondary, 8%);
-      }
-    }
-
-    &.btn-success ~ .dropdown-menu {
-      background-color: $success;
-      border-color: darken($success, 5%);
-
-      .dropdown-item {
-        color: $white;
-      }
-
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        background-color: darken($success, 8%);
-      }
-    }
-
-    &.btn-info ~ .dropdown-menu {
-      background-color: $info;
-      border-color: darken($info, 5%);
-
-      .dropdown-item {
-        color: $white;
-      }
-
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        background-color: darken($info, 8%);
-      }
-    }
-
-    &.btn-warning ~ .dropdown-menu {
-      background-color: $warning;
-      border-color: darken($warning, 5%);
-
-      .dropdown-item {
-        color: $white;
-      }
-
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        background-color: darken($warning, 8%);
-      }
-    }
-
-    &.btn-danger ~ .dropdown-menu {
-      background-color: $danger;
-      border-color: darken($primary, 5%);
-
-      .dropdown-item {
-        color: $white;
-      }
-
-      .dropdown-item:hover,
-      .dropdown-item:focus {
-        background-color: darken($danger, 8%);
-      }
-    }
+  &-outline-light {
+    color: $light;
   }
 }
 
 // Typography ==================================================================
 
-.text-secondary {
-  color: $gray-700 !important;
-}
-
-.blockquote-footer {
-  color: $gray-600;
-}
-
 // Tables ======================================================================
-
-table {
-  font-size: $font-size-sm;
-}
 
 .table {
 
   &-primary,
+  &-secondary,
   &-success,
   &-info,
   &-warning,
@@ -339,113 +202,51 @@ table {
         background-color: $table-active-bg;
       }
     }
+  }
 
+  .thead-dark th {
+    background-color: $primary;
+    border-color: $table-border-color;
+    font-family: $headings-font-family;
   }
 }
 
 // Forms =======================================================================
 
-label,
-.control-label,
-.help-block,
-.checkbox,
-.radio,
-.form-control-feedback {
-  font-size: $font-size-sm;
+legend {
+  font-family: $headings-font-family;
 }
 
 // Navs ========================================================================
 
-.dropdown-item {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
-  font-size: $font-size-sm;
-  font-weight: 300;
-}
-
-.nav-tabs {
-  .nav-link,
-  .nav-link.disabled,
-  .nav-link.disabled:hover,
-  .nav-link.disabled:focus {
-    border-color: $nav-tabs-border-color;
-    background-color: $gray-200;
-  }
-
-  .nav-link:hover,
-  .nav-link:focus {
-    background-color: lighten($gray-200, 5%);
-  }
-}
-
-.nav-pills {
-  .active {
-    border: 1px solid darken($primary, 5%);
-  }
+.dropdown-menu {
+  font-family: $font-family-sans-serif;
 }
 
 .breadcrumb {
-  border: 1px solid $dropdown-border-color;
-  border-radius: 3px;
-  font-size: $font-size-sm;
-  font-weight: 300;
-  text-transform: uppercase;
-}
-
-.pagination {
-  font-weight: 300;
-
-  .page-link {
-    border-color: transparent;
-    border-radius: 3px;
-    margin-left: 0.1em;
-    margin-right: 0.1em;
-
-    &:hover,
-    &:focus {
-      text-decoration: none;
-    }
+  a {
+    color: $navbar-dark-color;
   }
 
-  .page-item.disabled {
-    .page-link {
-      border-color: transparent;
-    }
+  a:hover {
+    color: $white;
+    text-decoration: none;
   }
-}
-
-.pagination,
-.pagination-lg,
-.pagination-sm {
-  .page-item:first-child,
-  .page-item:last-child {
-    .page-link {
-      border-radius: 3px;
-    }
-  }
-}
-
-.list-group {
-  font-size: $font-size-sm;
-  font-weight: 300;
 }
 
 // Indicators ==================================================================
 
-.close {
-  opacity: 0.6;
-  text-shadow: none;
-
-  &:hover,
-  &:focus {
-    opacity: 1;
-  }
-}
-
 .alert {
-  font-size: $font-size-sm;
-  font-weight: 300;
   color: $white;
+
+  h1, h2, h3, h4, h5, h6 {
+    color: inherit;
+  }
+
+  a,
+  .alert-link {
+    color: $white;
+  }
 
   &-primary {
     &, > th, > td {
@@ -495,13 +296,6 @@ label,
     }
   }
 
-  .alert-link {
-    font-weight: normal;
-    color: #fff;
-    text-decoration: underline;
-  }
-
-  &-secondary,
   &-light {
     &,
     & a:not(.btn),
@@ -512,31 +306,20 @@ label,
 }
 
 .badge {
-  padding-bottom: .3em;
+  color: $white;
 
-  &-warning,
-  &-info {
-    color: $white;
+  &-light {
+    color: $gray-700;
   }
 }
 
 // Progress bars ===============================================================
 
-.progress[value] {
-  height: 22px;
-  padding: 2px;
-  background-color: #f6f6f6;
-  border: 1px solid #ccc;
-  @include box-shadow(none);
-}
-
-
-// Popovers      ===============================================================
-
-.popover-header {
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
-}
-
 // Containers ==================================================================
 
+.card,
+.list-group-item {
+  h1, h2, h3, h4, h5, h6 {
+    color: inherit;
+  }
+}
