--- a/_includes/home.html
+++ b/_includes/home.html
@@ -43,10 +43,14 @@
   </div>
 </div>
 
-<div class="card mb-3">
-  <h3 class="card-header">Discover me</h3>
-  <div class="card-body">
-    <p class="card-text">Passionate about technology with 9+ years of experience: working in product management and project management with stakeholders and clients such as GE Avio Aero, Intesa Sanpaolo, Eutelsat. In my life, as an only child, I have to take care of my parents, both severely disabled. This, however, has not stopped me from pursuing what I set out to achieve.</p>
+<div class="row">
+  <div class="col-lg-12">
+    <div class="card mb-3">
+      <h3 class="card-header">Discover me</h3>
+      <div class="card-body">
+        <p class="card-text">Passionate about technology with 9+ years of experience: working in product management and project management with stakeholders and clients such as GE Avio Aero, Intesa Sanpaolo, Eutelsat. In my life, as an only child, I have to take care of my parents, both severely disabled. This, however, has not stopped me from pursuing what I set out to achieve.</p>
+      </div>
+    </div>
   </div>
 </div>
                    
