--- a/_includes/home.html
+++ b/_includes/home.html
@@ -73,20 +73,22 @@
 </div>             
 <div class="row">
   <div class="col-lg-4">
+    <div class="card mb-3" style="max-width: 20rem;">
       <ul class="list-group">
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        E-mail:
-        <span class="badge badge-primary badge-pill">e.bellussi@gmail.com</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Mobile Phone:
-        <span class="badge badge-primary badge-pill">+39 333 6892117</span>
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
-        Mobile Phone: 
-        <span class="badge badge-primary badge-pill">+44 7775 701751</span>
-      </li>
-    </ul>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          E-mail:
+          <span class="badge badge-primary badge-pill">e.bellussi@gmail.com</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Mobile Phone:
+          <span class="badge badge-primary badge-pill">+39 333 6892117</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Mobile Phone: 
+          <span class="badge badge-primary badge-pill">+44 7775 701751</span>
+        </li>
+      </ul>
+    </div>
   </div>
   <div class="col-lg-4">
     <div class="card mb-3" style="max-width: 20rem;">
