--- a/_includes/home.html
+++ b/_includes/home.html
@@ -73,7 +73,7 @@
 </div>             
 <div class="row">
   <div class="col-lg-4">
-    <div class="card" style="max-width: 20rem;">
+    <div class="card mb-3" style="max-width: 20rem;">
       <ul class="list-group">
         <li class="list-group-item d-flex justify-content-between align-items-center">
           E-mail:
