--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,8 +4,8 @@
       <div class="col-sm">
         <ul class="list-unstyled">
           <li>
-            {%- if site.license -%}
-              {{ site.license | escape }}
+            {%- if site.author -%}
+              {{ site.author | escape }}
             {%- else -%}
               {{ site.title | escape }}
             {%- endif -%}
