--- a/_includes/home.html
+++ b/_includes/home.html
@@ -19,7 +19,7 @@
       <div class="card-header">Business</div>
       <div class="card-body">
         <h4 class="card-title">Personal Activity</h4>
-        <p class="card-text">Mentorship at Italy of Tomorrow</p>
+        <p class="card-text">Mentorship at Hack4Cult</p>
       </div>
     </div>
   </div>
@@ -27,8 +27,8 @@
       <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title">Almaviva</h4>
-        <p class="card-text">Development of Architectural Solutions</p>
+        <h4 class="card-title">Personal Activity</h4>
+        <p class="card-text">Mentorship at Italy of Tomorrow</p>
       </div>
     </div>
   </div>
