--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1 class="display-3">Elia Bellussi</h1>
-  <p class="lead">Design Thinking | Scenario Planning | Open Innovation | Data Strategy and Analytics</p>
+  <p class="lead">Design Thinking | Scenario Planning | Open Innovation | Data Strategy and Analytics | Mentoring</p>
   <hr class="my-4">
   <p>To download my cv/resume click the button below.</p>
   <p class="lead">
