--- a/_includes/home.html
+++ b/_includes/home.html
@@ -27,7 +27,7 @@
       <div class="card mb-3">
       <div class="card-header">Business</div>
       <div class="card-body">
-        <h4 class="card-title"></h4>
+        <h4 class="card-title">Startup Geeks</h4>
         <p class="card-text">Mentorship at Italy of Tomorrow</p>
       </div>
     </div>
